apply black style and flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-complexity = 12
 max-line-length = 80
-ignore = E501,W503,E741
+ignore = E501,W503,E741,E203,N802,N803,N806
 select = C,E,F,N,W,B,B9,Q0
 
 [isort]
