--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python = "^3.7"
 numpy = "^1.16"
 torch = "^1.0"
 scipy = "^1.2"
+pyscf = "^1.6"
+tqdm = "^4.31"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.5"
