update after winterseminar

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ tqdm = "^4.31"
 ipykernel = "^5.1"
 matplotlib = "^3.0"
 ipywidgets = "^7.4"
+tensorboardX = "^1.6"
+Pillow = "^5.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.5"
