--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ flake8 = "^3.5"
 flake8-bugbear = "^18.8"
 flake8-comprehensions = "^1.4"
 flake8-quotes = "^1.0"
-black = "^18.3-alpha.0"
+black = "^19-beta.0"
 pep8-naming = "^0.7.0"
 isort = "^4.3"
 pytest = "^4.4"
