--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 python = "^3.7"
 certifi = "*"
 numpy = "^1.16"
-torch = "^1.0"
+torch = "~1.0"
 scipy = "^1.2"
 pyscf = "^1.6"
 pandas = "^0.24.2"
