fix higher angular momenta in gto torch evaluator

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,7 @@ line_length = 85
 sections = FUTURE,STDLIB,TYPING,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_typing = typing, typing_extensions
 no_lines_before = TYPING
+
+[tool:pytest]
+filterwarnings =
+    ignore:time.clock has been deprecated:DeprecationWarning
