exclude vendor/ from pytest search path

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,4 @@ no_lines_before = TYPING
 [tool:pytest]
 filterwarnings =
     ignore:time.clock has been deprecated:DeprecationWarning
+norecursedirs = vendor
