--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 python = "^3.7"
 certifi = "*"
 numpy = "^1.16"
-torch = "~1.1"
+torch = "~1.2"
 scipy = "^1.2"
 pyscf = "^1.6"
 pandas = "^0.24.2"
@@ -23,7 +23,6 @@ tqdm = "^4.31"
 ipykernel = "^5.1"
 matplotlib = "^3.0"
 ipywidgets = "^7.4"
-tensorboardX = "^1.6"
 Pillow = "^5.4"
 flake8 = "^3.5"
 flake8-bugbear = "^18.8"
@@ -35,7 +34,7 @@ isort = "^4.3"
 pytest = "^4.4"
 nbstripout = "^0.3.5"
 pysnooper = "^0.0.12"
-
+tensorboard = "^2.0"
 
 [tool.black]
 target-version = ["py37"]
