add torch-kfac as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pub"]
 	path = pub
 	url = git@github.com:noegroup/dl-qmc-pub.git
+[submodule "vendor/torch-kfac"]
+	path = vendor/torch-kfac
+	url = https://github.com/noegroup/torch-kfac.git
