--- a/src/dlqmc/default-params.toml
+++ b/src/dlqmc/default-params.toml
@@ -8,6 +8,8 @@ basis = "6-311g"
 [model_kwargs.pauli_kwargs]
 dist_basis_dim = 32
 freeze_mos = true
+freeze_confs = false
+conf_cutoff = 1e-3
 
 [model_kwargs.omni_kwargs]
 embedding_dim = 128
