--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 python = "^3.7"
 certifi = "*"
 numpy = "^1.16"
-torch = "~1.3"
+torch = "^1.1"
 scipy = "^1.2"
 pyscf = "^1.6"
 pandas = "^0.24.2"
