--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,16 +18,16 @@ torch = "^1.1"
 scipy = "^1.2"
 pyscf = "^1.6"
 pandas = "^0.24.2"
+toml = "^0.10.0"
 pytest = { version = "^4.4", optional = true }
 tensorboard = { version = "^2.0", optional = true }
 tqdm = { version = "^4.31", optional = true }
-toml = { version = "^0.10.0", optional = true }
 click = { version = "^7.0", optional = true }
 importlib-metadata = { version = "^0.23.0", optional = true }
 
 [tool.poetry.extras]
 test = ["pytest"]
-train = ["tensorboard", "tqdm", "toml", "click", "importlib-metadata"]
+train = ["tensorboard", "tqdm", "click", "importlib-metadata"]
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^5.1"
