--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/torch-kfac"]
 	path = vendor/torch-kfac
 	url = https://github.com/noegroup/torch-kfac.git
+[submodule "data/motta-hydrogen"]
+	path = data/motta-hydrogen
+	url = https://github.com/simonsfoundation/hydrogen-benchmark-PRX.git
