--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "dlqmc"
+name = "deepqmc"
 version = "0.1.0"
 description = "Deep-learning quantum Monte Carlo"
 authors = [
@@ -7,7 +7,7 @@ authors = [
     "Zeno Schätzle <zenoone@physik.fu-berlin.de>",
 ]
 packages = [
-    { include = "dlqmc", from = "src" },
+    { include = "deepqmc", from = "src" },
 ]
 
 [tool.poetry.dependencies]
@@ -39,7 +39,7 @@ pep8-naming = "^0.7.0"
 isort = "^4.3"
 
 [tool.poetry.scripts]
-dlqmc-train = "dlqmc.train:train_from_file"
+deepqmc-train = "deepqmc.train:train_from_file"
 
 [tool.black]
 target-version = ["py37"]
