--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,7 @@ no_lines_before = TYPING
 filterwarnings =
     ignore:time.clock has been deprecated:DeprecationWarning
 norecursedirs = vendor
+
+[coverage:run]
+branch = true
+source = deepqmc
