--- a/setup.cfg
+++ b/setup.cfg
@@ -22,3 +22,7 @@ norecursedirs = vendor
 [coverage:run]
 branch = true
 source = deepqmc
+
+[pydocstyle]
+add-ignore = D100,D101,D102,D103,D104,D105,D107,D202
+ignore-decorators = wraps
