--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,13 +23,14 @@ tensorboard = { version = "^2.0", optional = true }
 tqdm = { version = "^4.31", optional = true }
 click = { version = "^7.0", optional = true }
 sphinx = { version = "^2.2", optional = true }
+sphinxcontrib-katex = { version = "^0.5.1", optional = true }
 
 [tool.poetry.extras]
 wf = ["scipy", "pyscf"]
 test = ["pytest", "coverage"]
 train = ["tensorboard", "tqdm"]
 cli = ["click"]
-doc = ["sphinx"]
+doc = ["sphinx", "sphinxcontrib-katex"]
 all = ["scipy", "pyscf", "pytest", "coverage", "tensorboard", "tqdm", "click"]
 
 [tool.poetry.dev-dependencies]
