--- a/setup.cfg
+++ b/setup.cfg
@@ -24,5 +24,5 @@ branch = true
 source = deepqmc
 
 [pydocstyle]
-add-ignore = D100,D101,D102,D103,D104,D105,D107,D202
+add-ignore = D100,D102,D104,D105,D107,D202
 ignore-decorators = wraps
