[isort] change formatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ line_length = 85
 sections = FUTURE,STDLIB,TYPING,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_typing = typing, typing_extensions
 no_lines_before = TYPING
+combine_as_imports = true
 
 [tool:pytest]
 filterwarnings =
