add CO2 and bicyclobutane to systems

--- a/src/deepqmc/data/systems.toml
+++ b/src/deepqmc/data/systems.toml
@@ -35,3 +35,26 @@ coords = [[0.0, 0.0, 0.0], [1.595, 0.0, 0.0]]
 charges = [3, 1]
 charge = 0
 spin = 0
+
+[CO2]
+coords = [[-1.161, 0.0, 0.0], [0.0, 0.0, 0.0], [1.161, 0.0, 0.0]]
+charges = [8, 6, 8]
+charge = 0
+spin = 0
+
+[bicyclobutane]
+coords = [
+    [0.7507, 0.0000, -0.3193],
+    [-0.7507, 0.0000, -0.3193],
+    [0.0000, 1.1350, 0.3153],
+    [0.0000, -1.1350, 0.3153],
+    [1.4194, 0.0000, -1.1631],
+    [-1.4194, 0.0000, -1.1631],
+    [0.0000, 2.0820, -0.2148],
+    [0.0000, -2.0820, -0.2148],
+    [0.0000, 1.2163, 1.4020],
+    [0.0000, -1.2163, 1.4020],
+]
+charges = [6, 6, 6, 6, 1, 1, 1, 1, 1, 1]
+charge = 0
+spin = 0
