--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.7"
 toml = "^0.10.0"
+uncertainties = "^3.1.2"
 numpy = "^1.16"
 torch = "^1.1"
 scipy = { version = "^1.2", optional = true }
