--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest = { version = "^4.4", optional = true }
 coverage = { version = "^4.5", optional = true }
 tensorboard = { version = "^2.0", optional = true }
 tqdm = { version = "^4.31", optional = true }
+h5py = { version = "^2.10.0", optional = true }
 click = { version = "^7.0", optional = true }
 sphinx = { version = "^2.2", optional = true }
 sphinxcontrib-katex = { version = "^0.5.1", optional = true }
@@ -29,10 +30,10 @@ sphinxcontrib-katex = { version = "^0.5.1", optional = true }
 [tool.poetry.extras]
 wf = ["scipy", "pyscf"]
 test = ["pytest", "coverage"]
-train = ["tensorboard", "tqdm"]
+train = ["tensorboard", "tqdm", "h5py"]
 cli = ["click"]
 doc = ["sphinx", "sphinxcontrib-katex"]
-all = ["scipy", "pyscf", "pytest", "coverage", "tensorboard", "tqdm", "click"]
+all = ["scipy", "pyscf", "pytest", "coverage", "tensorboard", "tqdm", "h5py", "click"]
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.5"
