--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,11 +40,11 @@ all = ["scipy", "pyscf", "pytest", "coverage", "tensorboard", "tqdm", "h5py", "P
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.5"
-flake8-bugbear = "^18.8"
-flake8-comprehensions = "^1.4"
-flake8-quotes = "^1.0"
-black = "^19-beta.0"
-pep8-naming = "^0.7.0"
+flake8-bugbear = ">=18.8"
+flake8-comprehensions = ">=1.4"
+flake8-quotes = "^2"
+black = ">=19-beta.0"
+pep8-naming = ">=0.7"
 isort = "^4.3"
 pydocstyle = "^5.0.1"
 
