--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,15 @@ tables = { version = "^3.6.1", optional = true }
 sphinx = { version = "^2.2", optional = true }
 Pillow = { version = "^5.4", optional = true }
 sphinxcontrib-katex = { version = "^0.5.1", optional = true }
+click = { version = "^7.0", optional = true }
 
 [tool.poetry.extras]
 wf = ["scipy", "pyscf"]
 test = ["pytest", "coverage"]
 train = ["tensorboard", "tqdm", "tables", "Pillow"]
+cli = ["click"]
 doc = ["sphinx", "sphinxcontrib-katex"]
-all = ["scipy", "pyscf", "pytest", "coverage", "tensorboard", "tqdm", "tables", "Pillow"]
+all = ["scipy", "pyscf", "pytest", "coverage", "tensorboard", "tqdm", "tables", "Pillow", "click"]
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.5"
@@ -47,6 +49,9 @@ black = ">=19-beta.0"
 pep8-naming = ">=0.7"
 isort = "^4.3"
 pydocstyle = "^5.0.1"
+
+[tool.poetry.scripts]
+deepqmc = "deepqmc.cli:cli"
 
 [tool.black]
 target-version = ["py37"]
