add C2 to systems.toml

--- a/src/deepqmc/data/systems.toml
+++ b/src/deepqmc/data/systems.toml
@@ -48,6 +48,12 @@ charges = [8, 6, 8]
 charge = 0
 spin = 0
 
+[C2]
+coords = [[-1.1739, 0.0, 0.0], [1.1739, 0.0, 0.0]]
+charges = [6,6]
+charge = 0
+spin = 0
+
 [bicyclobutane]
 coords = [
     [0.7507, 0.0000, -0.3193],
