--- a/src/deepqmc/data/systems.toml
+++ b/src/deepqmc/data/systems.toml
@@ -36,6 +36,12 @@ charges = [5]
 charge = 0
 spin = 1
 
+[C]
+coords = [[0.0, 0.0, 0.0]]
+charges = [6]
+charge = 0
+spin = 2
+
 [LiH]
 coords = [[0.0, 0.0, 0.0], [1.595, 0.0, 0.0]]
 charges = [3, 1]
@@ -48,9 +54,33 @@ charges = [8, 6, 8]
 charge = 0
 spin = 0
 
+[Li2]
+coords = [[-1.3364, 0.0, 0.0], [1.3364, 0.0, 0.0]]
+charges = [3, 3]
+charge = 0
+spin = 0
+
+[Be2]
+coords = [[-1.230, 0.0, 0.0], [1.230, 0.0, 0.0]]
+charges = [4, 4]
+charge = 0
+spin = 0
+
+[B2]
+coords = [[-0.7951, 0.0, 0.0], [0.7951, 0.0, 0.0]]
+charges = [5, 5]
+charge = 0
+spin = 2
+
 [C2]
-coords = [[-1.1739, 0.0, 0.0], [1.1739, 0.0, 0.0]]
-charges = [6,6]
+coords = [[-0.621265, 0.0, 0.0], [0.621265, 0.0, 0.0]]
+charges = [6, 6]
+charge = 0
+spin = 0
+
+[N2]
+coords = [[-2.13534, 0.0, 0.0], [2.13534, 0.0, 0.0]]
+charges = [7, 7]
 charge = 0
 spin = 0
 
