improve code coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,12 +17,20 @@ combine_as_imports = true
 
 [tool:pytest]
 filterwarnings =
-    ignore:time.clock has been deprecated:DeprecationWarning
+    ignore:Code in deepqmc.tools:UserWarning
 norecursedirs = vendor
 
 [coverage:run]
 branch = true
 source = deepqmc
+omit =
+    src/deepqmc/wf/paulinet/backflow.py
+    src/deepqmc/cli.py
+    src/deepqmc/defaults.py
+    src/deepqmc/torchext/sloglindet.py
+    src/deepqmc/torchext/bdet.py
+    src/deepqmc/utils.py
+    src/deepqmc/tools/**.py
 
 [pydocstyle]
 add-ignore = D100,D102,D104,D105,D107,D202
