[ci] add travis support

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,13 +24,13 @@ norecursedirs = vendor
 branch = true
 source = deepqmc
 omit =
-    src/deepqmc/wf/paulinet/backflow.py
-    src/deepqmc/cli.py
-    src/deepqmc/defaults.py
-    src/deepqmc/torchext/sloglindet.py
-    src/deepqmc/torchext/bdet.py
-    src/deepqmc/utils.py
-    src/deepqmc/tools/**.py
+    */deepqmc/wf/paulinet/backflow.py
+    */deepqmc/cli.py
+    */deepqmc/defaults.py
+    */deepqmc/torchext/sloglindet.py
+    */deepqmc/torchext/bdet.py
+    */deepqmc/utils.py
+    */deepqmc/tools/**.py
 
 [pydocstyle]
 add-ignore = D100,D102,D104,D105,D107,D202
