--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
       python: 3.7
       stage: deploy
       script:
-        - poetry install -E all -E doc
+        - pip install sphinx sphinxcontrib-katex toml
         - sphinx-build -E doc doc/build
       deploy:
         provider: pages
