--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Documentation
       python: 3.7
       install:
-        - pip install -U sphinx sphinxcontrib-katex toml
+        - pip install -U "sphinx<3" sphinxcontrib-katex toml
       script:
         - sphinx-build -W -E doc doc/build
       env: CACHE_NAME=deploy
