--- a/src/deepqmc/data/systems.toml
+++ b/src/deepqmc/data/systems.toml
@@ -86,6 +86,16 @@ charges = [7, 7]
 charge = 0
 spin = 0
 
+[H2O]
+coords = [
+    [0.00000, 0.00000, 0.00000],
+    [0.75695, 0.58588, 0.00000],
+    [-0.75695, 0.58588, 0.00000],
+]
+charges = [8, 1, 1]
+charge = 0
+spin = 0
+
 [bicyclobutane]
 coords = [
     [0.7507, 0.0000, -0.3193],
