--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,14 +36,14 @@ uncertainties = "^3.1.2"
 numpy = "^1.16"
 torch = "^1.2"
 scipy = { version = "^1.2", optional = true }
-pyscf = { version = "^1.6", optional = true }
-pytest = { version = "^5", optional = true }
-coverage = { version = "^4.5", optional = true }
+pyscf = { version = "^1.6", optional = true, allow-prereleases = true }
+pytest = { version = ">=5 <7", optional = true }
+coverage = { version = ">=4.5 <6", optional = true }
 tensorboard = { version = "^2.0", optional = true }
 tqdm = { version = "^4.31", optional = true }
-h5py = { version = "^2.10.0", optional = true }
+h5py = { version = ">=2.10.0 <4", optional = true }
 sphinx = { version = "^2.2", optional = true }
-Pillow = { version = "^7", optional = true }
+Pillow = { version = ">=7 <9", optional = true }
 sphinxcontrib-katex = { version = "^0.5.1", optional = true }
 click = { version = "^7.0", optional = true }
 tomlkit = { version = "^0.7.0", optional = true }
@@ -60,7 +60,7 @@ all = ["scipy", "pyscf", "pytest", "coverage", "tensorboard", "tqdm", "h5py", "P
 flake8 = "^3.5"
 flake8-bugbear = ">=18.8"
 flake8-comprehensions = ">=1.4"
-flake8-quotes = "^2"
+flake8-quotes = ">=2"
 black = ">=20-beta.0"
 pep8-naming = ">=0.7"
 isort = "^4.3"
