--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ jobs:
     - stage: deploy
       name: Documentation
       language: minimal
+      install: skip
       script: skip
       before_cache: skip
       if: (branch = master) AND (NOT type IN (pull_request))
