fix spurious warnings in tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,8 @@ combine_as_imports = true
 [tool:pytest]
 filterwarnings =
     ignore:Code in deepqmc.extra:UserWarning
+    ignore:Call to deprecated create function.*code or query the descriptor_pool.:DeprecationWarning
+    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning
 norecursedirs = vendor
 
 [coverage:run]
