--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,7 @@ max-complexity = 12
 max-line-length = 80
 ignore = E501,W503,E741,E203,N802,N803,N806,E743,N812
 select = C,E,F,N,W,B,B9,Q0
-per-file-ignores =
-   ../notebooks/*.py:E703
+exclude = extern/
 
 [isort]
 multi_line_output = 3
@@ -14,6 +13,8 @@ sections = FUTURE,STDLIB,TYPING,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_typing = typing, typing_extensions
 no_lines_before = TYPING
 combine_as_imports = true
+skip_gitignore = true
+skip = extern/
 
 [tool:pytest]
 filterwarnings =
