fix tests for numpy 1.20 and torch 1.8

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ filterwarnings =
     ignore:Code in deepqmc.extra:UserWarning
     ignore:Call to deprecated create function.*code or query the descriptor_pool.:DeprecationWarning
     ignore:the imp module is deprecated in favour of importlib:DeprecationWarning
+    ignore:.*is a deprecated alias for the builtin.*:DeprecationWarning
+    ignore:Passing None into shape arguments as an alias for ():DeprecationWarning
 norecursedirs = vendor
 
 [coverage:run]
