--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,8 @@ sections = FUTURE,STDLIB,TYPING,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_typing = typing, typing_extensions
 no_lines_before = TYPING
 combine_as_imports = true
+skip_gitignore = true
+skip = extern/
 
 [tool:pytest]
 filterwarnings =
