[ci] update CI infra

--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-python@v2
         with:
