--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -2,7 +2,7 @@ name: Lint
 on: [push, pull_request]
 jobs:
   flake8:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-python@v2
         with:
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: flake8
   black:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: black . --check
   isort:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: isort . --check
   pydocstyle:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
