--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -10,8 +10,9 @@ jobs:
           python-version: 3.x
       - name: Install Poetry
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-          echo $HOME/.poetry/bin >>$GITHUB_PATH
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+          $HOME/.local/share/pypoetry/venv/bin/pip install -U poetry-dynamic-versioning
+          echo $HOME/.local/bin >>$GITHUB_PATH
       - name: Install dependencies
         run: pip install "sphinx<3" sphinxcontrib-katex toml
       - uses: actions/checkout@v2
