--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,8 +14,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Poetry
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-          echo $HOME/.poetry/bin >>$GITHUB_PATH
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+          $HOME/.local/share/pypoetry/venv/bin/pip install -U poetry-dynamic-versioning
+          echo $HOME/.local/bin >>$GITHUB_PATH
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -31,8 +32,6 @@ jobs:
             ${{ env.VIRTUAL_ENV }}/bin
             ${{ env.VIRTUAL_ENV }}/lib/python${{ matrix.python-version }}/site-packages
           key: ${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml') }}-211001
-      - name: Install dependencies
-        run: pip install -U poetry-dynamic-versioning
       - name: Build
         run: poetry build
       - name: Install
