--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -14,7 +14,7 @@ jobs:
           $HOME/.local/share/pypoetry/venv/bin/pip install -U poetry-dynamic-versioning
           echo $HOME/.local/bin >>$GITHUB_PATH
       - name: Install dependencies
-        run: pip install "sphinx<3" sphinxcontrib-katex toml
+        run: pip install "sphinx<3" sphinxcontrib-katex toml "docutils<0.18"
       - uses: actions/checkout@v2
       - name: Build
         run: sphinx-build -W -E doc doc/build
