get rid of certain warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ filterwarnings =
     ignore:the imp module is deprecated in favour of importlib:DeprecationWarning
     ignore:.*is a deprecated alias for the builtin.*:DeprecationWarning
     ignore:Passing None into shape arguments as an alias for ():DeprecationWarning
+    ignore:numpy.ufunc size changed, may indicate binary incompatibility:RuntimeWarning
 norecursedirs = vendor
 
 [coverage:run]
