--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,7 +32,7 @@ jobs:
           venv/bin/pip install -U pip wheel
           echo $PWD/venv/bin >>$GITHUB_PATH
       - name: Install
-        run: pip install -e .[wf,train,cli,test]
+        run: pip install -e .[wf,train,cli,test,app]
       - name: Test
         run: coverage run -m pytest
       - name: Upload to Codecov
