--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.12.3"]
+requires = [
+    "poetry-core@https://github.com/python-poetry/poetry-core/archive/325312c016d69189ac93c945ba0c1b69296c5e54.zip",
+    "poetry-dynamic-versioning>=0.12.3"
+]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
