--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -1,5 +1,9 @@
 name: Documentation
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: '0 6 * * 1'
 jobs:
   build:
     name: Build
@@ -10,7 +14,7 @@ jobs:
           python-version: 3.x
       - name: Install Poetry
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+          curl -sSL https://install.python-poetry.org | python -
           $HOME/.local/share/pypoetry/venv/bin/pip install -U poetry-dynamic-versioning
           echo $HOME/.local/bin >>$GITHUB_PATH
       - name: Install dependencies
