--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,5 +1,9 @@
 name: Tests
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: '0 6 * * 1'
 jobs:
   all:
     name: All
@@ -9,38 +13,27 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
     runs-on: ubuntu-latest
     steps:
+      - name: Set environment variables
+        run: echo YEAR_MONTH=$(date +"%Y-%m") >>$GITHUB_ENV
       - uses: actions/setup-python@v2
         id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Poetry
-        run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
-          $HOME/.local/share/pypoetry/venv/bin/pip install -U poetry-dynamic-versioning
-          echo $HOME/.local/bin >>$GITHUB_PATH
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}-${{ env.YEAR_MONTH }}
       - name: Create Python virtual environment
         run: |
           python -m venv venv
           venv/bin/pip install -U pip wheel
-          echo VIRTUAL_ENV=$PWD/venv >>$GITHUB_ENV
           echo $PWD/venv/bin >>$GITHUB_PATH
-          echo venv >>.git/info/exclude
-      - name: Set year/month
-        run: echo YEAR_MONTH=$(date +"%Y-%m") >>$GITHUB_ENV
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ${{ env.VIRTUAL_ENV }}/bin
-            ${{ env.VIRTUAL_ENV }}/lib/python${{ matrix.python-version }}/site-packages
-          key: ${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml') }}-${{ env.YEAR_MONTH }}
       - name: Install
         run: pip install -e .[wf,train,cli,test]
       - name: Test
         run: coverage run -m pytest
       - name: Upload to Codecov
         run: bash <(curl -s https://codecov.io/bash)
-      - name: Uninstall Pymbd
-        run: pip uninstall -y deepqmc
