[test] support subprocess coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ norecursedirs = vendor
 [coverage:run]
 branch = true
 source = deepqmc
+parallel = true
 omit =
     */deepqmc/wf/paulinet/backflow.py
     */deepqmc/torchext/sloglindet.py
