--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: pip install black
       - uses: actions/checkout@v2
-      - run: black . --check --preview
+      - run: black . --check --diff --preview
   isort:
     if: github.event_name != 'schedule' || github.repository == 'deepqmc/deepqmc'
     runs-on: ubuntu-latest
