--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-complexity = 12
 max-line-length = 80
-ignore = E501,W503,E741,E203,N802,N803,N806,E743,N812,N818
+ignore = E501,W503,E741,E203,N802,N803,N806,E743,N812,N818,E731
 select = C,E,F,N,W,B,B9,Q0
 per-file-ignores =
    ../notebooks/*.py:E703
