--- a/src/deepqmc/data/systems.toml
+++ b/src/deepqmc/data/systems.toml
@@ -107,6 +107,18 @@ charge = 0
 spin = 0
 unit = 'angstrom'
 
+[NH3]
+coords = [
+    [0.0, 0.0, 0.22013],
+    [0.0, 1.77583, -0.51364],
+    [1.53791, -0.88791, -0.51364],
+    [-1.53791, -0.88791, -0.51364],
+]
+charges = [7, 1, 1, 1]
+charge = 0
+spin = 0
+unit = 'angstrom'
+
 [bicyclobutane]
 coords = [
     [0.7507, 0.0000, -0.3193],
