--- a/src/deepqmc/jax/conf/config.yaml
+++ b/src/deepqmc/jax/conf/config.yaml
@@ -23,7 +23,7 @@ task:
     _partial_: true
     l2_reg: 0
     learning_rate_schedule:
-      _target_: deepqmc.jax.train.InverseLR
+      _target_: deepqmc.jax.fit.InverseLR
       lr: 0.1
       decay_rate: 100
     norm_constraint: 1e-3
@@ -32,12 +32,13 @@ task:
     num_burnin_steps: 0
     estimation_mode: 'fisher_exact'
   sampler:
-    _target_: deepqmc.jax.sampling.MetropolisSampler
-    _partial_: true
-    tau: 1.0
+    - _target_: deepqmc.jax.sampling.DecorrSampler
+      length: 10
+    - _target_: deepqmc.jax.sampling.MetropolisSampler
+      _partial_: true
+      tau: 1.0
   workdir: ???
   steps: 10000
   sample_size: 10000
-  decorr: 10
   clip_width: 2.0
   seed: 0
