hydra configs for training and evaluation
Evaluations can be executed by selecting the evaluation task from the
CLI and specifying the directory from where to load the WF to
task.restdir. Training restarts can be done analogously with the restart
task.

--- a/src/deepqmc/jax/conf/config.yaml
+++ b/src/deepqmc/jax/conf/config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
   - optional .@_here_: deepqmc
-  - task: qho
+  - task: train
   - override hydra/job_logging: custom
 hydra:
   job:
@@ -10,6 +10,4 @@ hydra:
   searchpath:
     - file://conf
 task:
-  _target_: deepqmc.jax.app.train_from_factories
   workdir: ???
-  seed: 0
