[conf] move ansatz and hamil outside of task

--- a/src/deepqmc/jax/conf/config.yaml
+++ b/src/deepqmc/jax/conf/config.yaml
@@ -2,6 +2,8 @@ defaults:
   - _self_
   - optional .@_here_: deepqmc
   - task: train
+  - ansatz: paulinet
+  - hamil: qc
   - override hydra/job_logging: custom
 hydra:
   job:
